Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-06-24 (SVN):
    * Makefiles: Always keep the debug symbols in and use strip if they
      are not required. Always add the default CPUFLAGS to CFLAGS along
      with the ARGCHFLAGS. Make debug- builds possible for the h2patch
      application. Remove the -fno-builtin option from the xdelta3 build
      flags. Change -O3 to -O2 in the xdelta3 optimized build flags.

2011-06-23 (SVN):
    * gamecode, soul.hc: Made the soul sphere in sync with the skull or
      the cross. Changed the model lighting style to fullbright so now
      the skull and the cross are well discernible in dark places. The
      soul sphere can now gain momentum during spawning and fly around
      instead of hovering over the dead body and sometimes got stuck.
      Scaled down the soul at the end of its lifetime. Added the demoness
      among the list of bad people in the portals version in parallel to
      the hw version. Corrected some inconsistencies and minor errors.

2011-06-23 (SVN):
    * host_string.c (Host_LoadStrings): Remove the sprintf() call from
      the hexenworld '^' to '\n' translation and just store '\n' at the
      position where '^' is found.

2011-06-23 (SVN):
    * hexen2/cl_string.c: Copied from pr_strng.c, now holds only the
      strings for the client-side puzzle piece and objectives displays.
      Removed misleading pr_ prefix from the info_strings variables.
      Accordingly, renamed PR_LoadPuzzleStrings and PR_LoadInfoStrings
      to CL_LoadPuzzleStrings and CL_LoadInfoStrings.
    * h2shared/host_string.c, host_string.h: Renamed from pr_strng.c
      and pr_strng.h, now holds only the string resource shared between
      client and server. Renamed the global variables from misleading
      pr_ prefixed form to host_ prefixed form. Renamed PR_LoadStrings
      to Host_LoadStrings, accordingly.
    * Makefiles: Updated after the cl_string.c and host_string.c changes.